loki/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring 
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: 'ai-prd-nks-alb-loki'
    alb.ingress.kubernetes.io/ssl-certificate-no: "11111"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/enable-sticky-session: "true"
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: loki-stack-grafana
      port:
        number: 80
